@@ -47,7 +47,17 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
 		<plugins>
+			<!--plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>add-modules java.se</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -70,8 +80,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
+					<argLine>--add-modules java.se</argLine>
 					<!--jvm>/opt/jdk-1.8/bin/java</jvm -->
-					<!-- ${jdkHome} siehe toolchains.xml, JAVA_HOME=/opt/jdk-1.8 M2_HOME=/opt/maven 
+					<!-- ${jdkHome} siehe toolchains.xml, JAVA_HOME=/opt/jdk-1.8 M2_HOME=/opt/maven
 						/opt/maven/bin/mvn test -->
 					<!-- Fork every test because it will launch a separate AS instance -->
 					<forkCount>4</forkCount>
